<resources>
    <string name="app_name">GraphicalPasswordAPP</string>
    <string name="icon">icon</string>
    <string name="firstMainTitle">Start</string>
    <string name="secondMainTitle">your</string>
    <string name="thirdMainTitle">adventure</string>
    <string name="loginButton">Log in</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="signUpHere">Sign up here.</string>
    <string name="loginTitle">Log In</string>
    <string name="usernameHint">"  E-mail Address"</string>
    <string name="passwordHint">" Password"</string>
    <string name="firstSignUpTitle">New</string>
    <string name="secondSignUpTitle">Account</string>
    <string name="currentStepOne">1</string>
    <string name="currentStepTwo">2</string>
    <string name="currentStepThree">3</string>
    <string name="currentStepFour">4</string>
    <string name="wholeSignUpSteps">/ 4</string>
    <string name="wholeLoginSteps">/2</string>
    <string name="steps">STEPS</string>
    <string name="nameHint">Your Name</string>
    <string name="nameTip">NAME</string>
    <string name="emailTip">EMAIL</string>
    <string name="emailSignUp">Email Address</string>
    <string name="signUpNext">Next</string>
    <string name="passwordTip">Please draw your first password above!</string>
    <string name="clear">CLEAR</string>
    <string name="normal">Normal</string>
    <string name="emboss">Emboss</string>
    <string name="blur">Blur</string>
    <string name="patterns">Drawing Patterns: </string>
    <string name="success">Register Succeed!</string>
    <string name="home">Home</string>
    <string name="confirm">CONFIRM</string>
    <string name="changePassword">Change Password</string>
    <string name="viewPassword">View My Password</string>
    <string name="manageDistractor">Manage Distractor</string>
    <string name="firstTip">Your first password:</string>
    <string name="secondTip">Your second password:</string>
    <string name="thirdTip">Your third password:</string>
    <string name="back">BACK</string>
    <string name="logout">LOGOUT</string>
    <string name="setting">SETTING</string>
    <string name="fresh">REFRESH</string>
    <string name="change">CHANGE</string>
    <string name="save">SAVE</string>
    <string name="autorefresh">Auto-Refresh Distractors</string>
    <string name="recommendation">It\'s recommended that keep the auto-refresh function off if you prefer a fixed password.</string>
</resources>
