<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_compass" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="233dp"
        android:layout_marginBottom="448dp"
        android:text="@string/firstMainTitle"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:typeface="normal"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondTitle"
        android:layout_width="102dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="284dp"
        android:layout_marginBottom="394dp"
        android:text="@string/secondMainTitle"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thirdTitle"
        android:layout_width="218dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="330dp"
        android:text="@string/thirdMainTitle"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="148dp"
        android:layout_height="47dp"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:layout_marginBottom="67dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="login"
        android:text="@string/loginButton"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="184dp"
        android:layout_marginRight="184dp"
        android:layout_marginBottom="30dp"
        android:text="@string/dontHaveAccount"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="235dp"
        android:layout_marginLeft="235dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginBottom="30dp"
        android:onClick="signUp"
        android:text="@string/signUpHere"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>