<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E404E"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/firstTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="257dp"
        android:layout_marginRight="257dp"
        android:text="@string/firstSignUpTitle"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="188dp"
        android:layout_marginRight="188dp"
        android:text="@string/secondSignUpTitle"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstTitle" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="295dp"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/steps"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="298dp"
        android:layout_marginLeft="298dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:text="@string/currentStepOne"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wholeSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="322dp"
        android:layout_marginLeft="322dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/wholeSignUpSteps"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:backgroundTint="@android:color/white"
        android:ems="13"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTip" />

    <TextView
        android:id="@+id/nameTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="292dp"
        android:layout_marginRight="292dp"
        android:text="@string/nameTip"
        android:textColor="@android:color/white"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondTitle" />

    <TextView
        android:id="@+id/emailTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="290dp"
        android:layout_marginRight="290dp"
        android:text="@string/emailTip"
        android:textColor="@android:color/white"
        app:fontFamily="@font/alfa_slab_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/e-mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:backgroundTint="@android:color/white"
        android:ems="13"
        android:hint="@string/emailSignUp"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTip" />

    <Button
        android:id="@+id/stepOneButton"
        android:layout_width="141dp"
        android:layout_height="57dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginEnd="138dp"
        android:layout_marginRight="138dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="verification"
        android:text="@string/signUpNext"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.graphicalpasswordapp.PaintView
        android:id="@+id/firstGraphic"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="81dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondTitle" />

    <Button
        android:id="@+id/stepTwoButton"
        android:layout_width="141dp"
        android:layout_height="57dp"
        android:layout_marginStart="221dp"
        android:layout_marginLeft="221dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="complete"
        android:text="@string/signUpNext"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstGraphic" />

    <TextView
        android:id="@+id/loginResult"
        android:layout_width="280dp"
        android:layout_height="22dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e-mail" />

    <TextView
        android:id="@+id/passwordTip"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginBottom="3dp"
        android:text="@string/passwordTip"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="141dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="220dp"
        android:layout_marginRight="220dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="clear"
        android:text="@string/clear"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstGraphic" />

    <RadioGroup
        android:id="@+id/patternRadio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="449dp"
        android:checkedButton="@id/normalButton"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pattern"
        app:layout_constraintTop_toBottomOf="@+id/secondTitle">

        <RadioButton
            android:id="@+id/normalButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="normal"
            android:text="@string/normal"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/embossButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="emboss"
            android:text="@string/emboss"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/blurButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="blur"
            android:text="@string/blur"
            android:textColor="@android:color/white" />

    </RadioGroup>

    <TextView
        android:id="@+id/pattern"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="262dp"
        android:layout_marginRight="262dp"
        android:layout_marginBottom="455dp"
        android:text="@string/patterns"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondTitle" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="318dp"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:layout_marginBottom="318dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>