<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E404E"
    tools:context=".SuccessActivity">

    <TextView
        android:id="@+id/success"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/success"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="141dp"
        android:layout_height="57dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="home"
        android:text="@string/home"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="141dp"
        android:layout_height="57dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="backToLogin"
        android:text="@string/loginButton"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>